MDEV-5148: Server crashes in print_explain on killing EXPLAIN EXTENDED - Make mysql_select() return error when the query was killed.